--- a/BlackjackV2/BlackjackV2.vcxproj.filters
+++ b/BlackjackV2/BlackjackV2.vcxproj.filters
@@ -15,6 +15,9 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Blackjack_old.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="Blackjack.c">
       <Filter>Source Files</Filter>
     </ClCompile>
